<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="action_settings">Settings</string>

    <!-- content main xml -->
    <string name="network_type_required">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">Not Set</string>
    <string name="schedule_job">Schedule job</string>
    <string name="cancel_job">Cancel Job</string>

    <!-- Show Notification class -->
    <string name="job_service_notification">Job Service notification</string>
    <string name="notifications_from_job_service">Notifications from Job Service</string>

    <!-- Main Activity -->
    <string name="no_jobs">No Jobs</string>
    <string name="jobs_cancelled">Jobs Cancelled</string>
    <string name="set_constraint">Please set at least one constraint</string>
    <string name="job_scheduled">Job Scheduled, job will run when the constraints are met.</string>
    <string name="seconds">%1$s Seconds</string>

    <!-- Work Class -->
    <string name="job_started">Job has Started</string>
    <string name="your_job_is_running">Your Job is Running</string>
    <string name="job_has_finished">Job has Finished</string>
    <string name="your_job_has_finished_running">Your Job has Finished Running</string>
    <string name="job_has_been_stopped">Job has Been Stopped</string>
    <string name="your_job_has_stopped_running">Your Job has Stopped Running</string>
</resources>
